[package]
name = "tauri-plugin-klaver"
version = "0.1.0"
authors = ["Rasmus Kildevæld"]
description = ""
edition = "2021"
rust-version = "1.77.2"
exclude = ["/examples", "/webview-dist", "/webview-src", "/node_modules"]
links = "tauri-plugin-klaver"

[features]
# default = ["transform"]
transform = ["klaver/transform"]

[dependencies]
tauri = { version = "2.1" }
serde = "1.0"
thiserror = "2"
klaver = { git = "https://github.com/fairy-render/klaver", features = [
    "parallel",
] }
klaver-wintercg = { git = "https://github.com/fairy-render/klaver", features = [
] }
rquickjs-util = { git = "https://github.com/fairy-render/klaver", features = [
    "vaerdi",
] }
vaerdi = { git = "https://github.com/kildevaeld/vaerdi-rs", features = [
    "serde",
] }

[build-dependencies]
tauri-plugin = { version = "2.0", features = ["build"] }
